# bigsay

./: .gitignore  LICENSE  README.md  bigsay.py  flake.nix  main.py  package.nix  pyproject.toml  shell.nix  style.css
bigsay/: main.py
bigsay/assets/: main.ui
src/bigsay/: main.py
