[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigsay"
version = "0.1.0"
description = "Generate big messages with GTK"
requires-python = ">=3.10"
dependencies = ["PyGObject"]

[project.scripts]
bigsay = "bigsay:run_app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bigsay" = ["assets/*.ui", "assets/*.css"]

[tool.setuptools.packages.find]
include = ["bigsay"]
